--- a/slac_Frontend/Style1.css
+++ b/slac_Frontend/Style1.css
@@ -69,7 +69,51 @@ html, header{
 .textarea{
     resize:none;
 }
+/* toggle in label designing */
+.toggle {
+    position : relative ;
+    display : inline-block;
+    width : 75px;
+    height : 22px;
+    background-color: red;
+    border-radius: 35px;
+    border: 1px solid gray;
+}
 
+/* After slide changes */
+.toggle:after {
+    content: '';
+    position: absolute;
+    width: 22px;
+    height: 22px;
+    border-radius: 80%;
+    background-color: gray;
+    top: 0.1px;
+    left: 0.2px;
+    right: 0.2px;
+    transition:  all 0.5s;
+}
+
+/* Toggle text */
+p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
+/* Checkbox cheked effect */
+.checkbox:checked + .toggle::after {
+    left : 49px;
+}
+
+/* Checkbox cheked toggle label bg color */
+.checkbox:checked + .toggle {
+    background-color: green;
+}
+
+/* Checkbox vanished */
+.checkbox {
+    display : none;
+}
 
 
 
